# Practica-C-01

./: CMakeLists.txt  CMakeProject_1.cpp  CMakeProject_1.h  README.md  sonar-project.properties
.github/workflows/: build.yml
