# CMakeList.txt: proyecto de CMake para CMakeProject_1, incluya el origen y defina
# la lógica específica del proyecto aquí.
#
cmake_minimum_required (VERSION 3.8)

project ("CMakeProject_1")

# Agregue un origen al ejecutable de este proyecto.
add_executable (CMakeProject_1 "CMakeProject_1.cpp" "CMakeProject_1.h")

# TODO: Agregue pruebas y destinos de instalación si es necesario.
